--- a/client/index.html
+++ b/client/index.html
@@ -30,6 +30,30 @@
       position: fixed !important;
     }
   </style>
+  <style>
+      .videoContainer {
+          position: relative;
+          width: 100%;
+          height: 100%;
+      }
+      .videoContainer video {
+          position: absolute;
+          width: 100vh;
+          height: 100vw;
+      }
+      .volume_bar {
+          position: absolute;
+          width: 5px;
+          height: 0px;
+          right: 0px;
+          bottom: 0px;
+          background-color: #12acef;
+      }
+      #remotes {
+          width: 100%;
+          height: 100%;
+      }
+  </style>
 </head>
 <body> 
   <toast></toast> 
@@ -81,6 +105,7 @@
     </div>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
+  <script src="out/simplewebrtc-with-adapter.bundle.js"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
 
